--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,21 @@
-h1 {
+$github : #58D68D;
+
+img, h1, h2 {
   text-align: center;
-  color: red;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 50%;
+  width: 45%;
+}
+
+h1 {
+  color: $github;
+}
+
+.jumbotron {
+  display: none;
 }
